src/render/tests/snapshots/diagnostic_render__render__tests__singleline__overlapping_1.snap
---
source: src/render/tests/singleline.rs
expression: result
---
error: Mismatched types
 --> test_file.test:1:5
1 | let main = 23;
  |     ^^^^---^^
  |     |   |
  |     |   something else
  |     something

